Add final notebooks and report (in French)

--- a/pre_processing/preprocessing.ipynb
+++ b/pre_processing/preprocessing.ipynb
@@ -6,8 +6,8 @@
    "id": "8918106b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-15T14:40:36.497128Z",
-     "start_time": "2022-04-15T14:40:35.674452Z"
+     "end_time": "2022-04-27T06:05:46.192194Z",
+     "start_time": "2022-04-27T06:05:45.134335Z"
     }
    },
    "outputs": [],
@@ -17,17 +17,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 18,
    "id": "614f003f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-15T15:11:17.717329Z",
-     "start_time": "2022-04-15T15:11:17.592487Z"
+     "end_time": "2022-04-27T06:07:25.214750Z",
+     "start_time": "2022-04-27T06:07:25.049774Z"
     }
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"survey.csv\")"
+    "df = pd.read_csv(\"../data/survey.csv\")"
    ]
   },
   {
@@ -40,12 +40,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "7b7b804f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-03T21:04:31.622530Z",
-     "start_time": "2022-04-03T21:04:31.616666Z"
+     "end_time": "2022-04-27T06:07:27.316618Z",
+     "start_time": "2022-04-27T06:07:27.310495Z"
     }
    },
    "outputs": [
@@ -55,7 +55,7 @@
        "dtype('O')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,8 +70,8 @@
    "id": "97dd0eec",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-03T21:04:32.187413Z",
-     "start_time": "2022-04-03T21:04:32.178581Z"
+     "end_time": "2022-04-27T06:05:58.529816Z",
+     "start_time": "2022-04-27T06:05:58.517276Z"
     }
    },
    "outputs": [
@@ -92,12 +92,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "b5918c40",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-03T21:04:33.813960Z",
-     "start_time": "2022-04-03T21:04:33.800740Z"
+     "end_time": "2022-04-27T06:07:03.001047Z",
+     "start_time": "2022-04-27T06:07:02.988262Z"
     }
    },
    "outputs": [],
@@ -119,12 +119,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "473cf2e0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-03T21:04:34.945077Z",
-     "start_time": "2022-04-03T21:04:34.936778Z"
+     "end_time": "2022-04-27T06:07:03.994269Z",
+     "start_time": "2022-04-27T06:07:03.987697Z"
     }
    },
    "outputs": [
@@ -136,13 +136,28 @@
        ", ordered=True)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df[\"how_old_are_you\"].dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "b4b5925d",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-04-27T06:07:19.511848Z",
+     "start_time": "2022-04-27T06:07:19.060435Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"../data/survey.csv\")"
    ]
   },
   {
@@ -155,12 +170,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 8,
    "id": "5ce3f513",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-03T22:13:48.662267Z",
-     "start_time": "2022-04-03T22:13:48.646509Z"
+     "end_time": "2022-04-27T06:06:16.277826Z",
+     "start_time": "2022-04-27T06:06:16.255583Z"
     }
    },
    "outputs": [],
@@ -308,12 +323,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 9,
    "id": "0fbe93ea",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-03T22:19:22.381395Z",
-     "start_time": "2022-04-03T22:19:22.377370Z"
+     "end_time": "2022-04-27T06:06:18.375233Z",
+     "start_time": "2022-04-27T06:06:18.370972Z"
     }
    },
    "outputs": [],
@@ -359,12 +374,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 10,
    "id": "a57a9ee8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-03T22:20:35.967726Z",
-     "start_time": "2022-04-03T22:20:35.958221Z"
+     "end_time": "2022-04-27T06:06:20.555373Z",
+     "start_time": "2022-04-27T06:06:20.546307Z"
     }
    },
    "outputs": [
@@ -374,7 +389,7 @@
        "93"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,12 +400,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "f1883a78",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-11T21:37:12.186831Z",
-     "start_time": "2022-04-11T21:37:12.174189Z"
+     "end_time": "2022-04-27T06:06:22.750831Z",
+     "start_time": "2022-04-27T06:06:22.739716Z"
     }
    },
    "outputs": [
@@ -418,7 +433,7 @@
        "       'Ukraine', 'Jamaica', 'Kenya', 'Jordan'], dtype=object)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,17 +444,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 12,
    "id": "2bcd0d46",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-03T22:21:14.205759Z",
-     "start_time": "2022-04-03T22:21:13.718365Z"
+     "end_time": "2022-04-27T06:06:31.722800Z",
+     "start_time": "2022-04-27T06:06:31.347629Z"
     }
    },
    "outputs": [],
    "source": [
-    "df.to_csv(\"survey.csv\")"
+    "df.to_csv(\"../data/survey.csv\")"
    ]
   },
   {
@@ -451,11 +466,29 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "05df0a9d",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "3da96880",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-04-27T06:09:05.942832Z",
+     "start_time": "2022-04-27T06:09:05.932251Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Trying to do a clustering on industry on another notebook named _\"preprocessing_industry.ipynb\"_"
+    "df[\"industry cluster tf_idf_bigrams\"].nunique()"
    ]
   },
   {
@@ -601,22 +634,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 44,
    "id": "ddf78f1f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-15T15:15:08.505282Z",
-     "start_time": "2022-04-15T15:15:08.494774Z"
+     "end_time": "2022-04-27T06:18:46.300027Z",
+     "start_time": "2022-04-27T06:18:46.292293Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "25"
+       "6"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,12 +660,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 23,
    "id": "1691141d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-15T15:11:42.357346Z",
-     "start_time": "2022-04-15T15:11:42.350387Z"
+     "end_time": "2022-04-27T06:11:05.946621Z",
+     "start_time": "2022-04-27T06:11:05.931626Z"
     }
    },
    "outputs": [],
@@ -642,12 +675,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 24,
    "id": "d466e957",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-15T15:11:51.349887Z",
-     "start_time": "2022-04-15T15:11:51.340046Z"
+     "end_time": "2022-04-27T06:11:07.129345Z",
+     "start_time": "2022-04-27T06:11:07.116399Z"
     }
    },
    "outputs": [],
@@ -657,12 +690,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 43,
    "id": "384e40ea",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-15T15:15:05.046077Z",
-     "start_time": "2022-04-15T15:15:05.017813Z"
+     "end_time": "2022-04-27T06:18:44.008360Z",
+     "start_time": "2022-04-27T06:18:43.958841Z"
     }
    },
    "outputs": [],
@@ -673,7 +706,9 @@
     "df[\"race\"] = df[\"race\"].apply(lambda x: \"Prefer not to answer\" if \"Black\" in x and \"White\" in x else x)\n",
     "df[\"race\"] = df[\"race\"].apply(lambda x: \"Asian\" if x == \"Asian or Asian American, White\" and len(x.split(\"or \")) == 2 else x)\n",
     "df[\"race\"] = df[\"race\"].apply(lambda x: \"Hispanic\" if x == \"Hispanic, Latino, or Spanish origin, White\" and len(x.split(\"or \")) == 2 else x)\n",
-    "df[\"race\"] = df[\"race\"].apply(lambda x: \"Arabic\" if x == \"Middle Eastern or Northern African, White\" or x == \"Middle Eastern or Northern African\" else x)"
+    "df[\"race\"] = df[\"race\"].apply(lambda x: \"Arabic\" if x == \"Middle Eastern or Northern African, White\" or x == \"Middle Eastern or Northern African\" else x)\n",
+    "df[\"race\"] = df[\"race\"].apply(lambda x: \"White\" if x == \"Native American or Alaska Native, White\" else x)\n",
+    "df[\"race\"] = df[\"race\"].apply(lambda x: \"Prefer not to answer\" if len(x.split(\",\")) >= 2 or len(x.split(\"or \")) >= 2 else x)"
    ]
   },
   {
@@ -686,12 +721,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 45,
    "id": "7a6d3e49",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-15T15:15:11.089837Z",
-     "start_time": "2022-04-15T15:15:11.074491Z"
+     "end_time": "2022-04-27T06:18:48.137327Z",
+     "start_time": "2022-04-27T06:18:48.123764Z"
     }
    },
    "outputs": [
@@ -726,7 +761,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>White</th>\n",
-       "      <td>21909</td>\n",
+       "      <td>21974</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Asian</th>\n",
@@ -734,7 +769,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Prefer not to answer</th>\n",
-       "      <td>955</td>\n",
+       "      <td>1091</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Hispanic</th>\n",
@@ -748,117 +783,22 @@
        "      <th>Arabic</th>\n",
        "      <td>133</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Native American or Alaska Native, White</th>\n",
-       "      <td>65</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Native American or Alaska Native</th>\n",
-       "      <td>39</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Black or African American, Hispanic, Latino, or Spanish origin</th>\n",
-       "      <td>27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Asian or Asian American, Hispanic, Latino, or Spanish origin</th>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Asian or Asian American, Hispanic, Latino, or Spanish origin, White</th>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Hispanic, Latino, or Spanish origin, Native American or Alaska Native</th>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Hispanic, Latino, or Spanish origin, Native American or Alaska Native, White</th>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Asian or Asian American, Middle Eastern or Northern African</th>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Asian or Asian American, Black or African American</th>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Hispanic, Latino, or Spanish origin, Middle Eastern or Northern African, White</th>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Asian or Asian American, Native American or Alaska Native, White</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Black or African American, Middle Eastern or Northern African</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Asian or Asian American, Hispanic, Latino, or Spanish origin, Native American or Alaska Native, White</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Asian or Asian American, Black or African American, Hispanic, Latino, or Spanish origin</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Middle Eastern or Northern African, Native American or Alaska Native</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Middle Eastern or Northern African, Native American or Alaska Native, White</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Asian or Asian American, Native American or Alaska Native</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Asian or Asian American, Middle Eastern or Northern African, White</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Hispanic, Latino, or Spanish origin, Middle Eastern or Northern African</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                    annual_salary\n",
-       "race                                                             \n",
-       "White                                                       21909\n",
-       "Asian                                                        1544\n",
-       "Prefer not to answer                                          955\n",
-       "Hispanic                                                      872\n",
-       "Black                                                         618\n",
-       "Arabic                                                        133\n",
-       "Native American or Alaska Native, White                        65\n",
-       "Native American or Alaska Native                               39\n",
-       "Black or African American, Hispanic, Latino, or...             27\n",
-       "Asian or Asian American, Hispanic, Latino, or S...             11\n",
-       "Asian or Asian American, Hispanic, Latino, or S...             11\n",
-       "Hispanic, Latino, or Spanish origin, Native Ame...             10\n",
-       "Hispanic, Latino, or Spanish origin, Native Ame...              9\n",
-       "Asian or Asian American, Middle Eastern or Nort...              7\n",
-       "Asian or Asian American, Black or African American              7\n",
-       "Hispanic, Latino, or Spanish origin, Middle Eas...              4\n",
-       "Asian or Asian American, Native American or Ala...              2\n",
-       "Black or African American, Middle Eastern or No...              2\n",
-       "Asian or Asian American, Hispanic, Latino, or S...              1\n",
-       "Asian or Asian American, Black or African Ameri...              1\n",
-       "Middle Eastern or Northern African, Native Amer...              1\n",
-       "Middle Eastern or Northern African, Native Amer...              1\n",
-       "Asian or Asian American, Native American or Ala...              1\n",
-       "Asian or Asian American, Middle Eastern or Nort...              1\n",
-       "Hispanic, Latino, or Spanish origin, Middle Eas...              1"
+       "                      annual_salary\n",
+       "race                               \n",
+       "White                         21974\n",
+       "Asian                          1544\n",
+       "Prefer not to answer           1091\n",
+       "Hispanic                        872\n",
+       "Black                           618\n",
+       "Arabic                          133"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -895,6 +835,68 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "72be869c",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-04-27T06:14:49.270830Z",
+     "start_time": "2022-04-27T06:14:49.264320Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Asian or Asian American',\n",
+       " ' Hispanic',\n",
+       " ' Latino',\n",
+       " ' or Spanish origin',\n",
+       " ' Native American or Alaska Native',\n",
+       " ' White']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test = \"Asian or Asian American, Hispanic, Latino, or Spanish origin, Native American or Alaska Native, White\"\n",
+    "test.split(\",\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "520e9a41",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-04-27T06:21:48.948809Z",
+     "start_time": "2022-04-27T06:21:48.533785Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"../data/survey.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "af21df96",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-04-27T06:21:46.315142Z",
+     "start_time": "2022-04-27T06:21:46.304891Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df.drop([\"Unnamed: 0\", \"Unnamed: 0.1\", \"Unnamed: 0.1.1\", \"Unnamed: 0.1.1.1\"], axis=1, inplace=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2656e0ba",
    "metadata": {},
@@ -903,12 +905,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a5e5b807",
+   "metadata": {},
+   "source": [
+    "# Convert some object data type to categorical data type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "751daeb8",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-04-27T06:43:43.408128Z",
+     "start_time": "2022-04-27T06:43:43.355866Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df[\"how_old_are_you\"] = pd.Categorical(\n",
+    "    df[\"how_old_are_you\"],\n",
+    "    ordered=True,\n",
+    "    categories=[\n",
+    "        \"under 18\",\n",
+    "        \"18-24\",\n",
+    "        \"25-34\",\n",
+    "        \"35-44\",\n",
+    "        \"45-54\",\n",
+    "        \"55-64\",\n",
+    "        \"65 or over\"\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aead6c5a",
+   "id": "7bbe3f37",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df[\"overall_years_of_professional_experience\"] = pd.Categorical(\n",
+    "    df[\"overall_years_of_professional_experience\"],\n",
+    "    ordered=True,\n",
+    "    categories=[\n",
+    "        \"1 year or less\",\n",
+    "        \"2 - 4 years\",\n",
+    "        \"5-7 years\",\n",
+    "        \"\"\n",
+    "    ]\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
